layers filename capitalized

--- a/P000060.opf/layers/v001/BookTitle.yml
+++ b/P000060.opf/layers/v001/BookTitle.yml
@@ -1,5 +1,5 @@
 id: e5c7c5df7a5a4873a6c934d51c58c826
-annotation_type: book_title
+annotation_type: BookTitle
 revision: '00001'
 annotations:
 - span:
