--- a/P000060.opf/layers/v001/Yigchung.yml
+++ b/P000060.opf/layers/v001/Yigchung.yml
@@ -1,5 +1,5 @@
 id: 222f42446a3642ddbb594683da231a68
-annotation_type: tsawa
+annotation_type: Tsawa
 revision: '00001'
 annotations:
 - id: c5832584a2c64dcfbae6a8c530738553
