--- a/P000060.opf/meta.yml
+++ b/P000060.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P000060
 initial_creation_type: ebook
+created_at: 31/01/2020
+last_modified_at: 25/11/2021
 source_metadata:
   title: ༄༅། །སྐུ་གསུམ་ཞིང་ཁམས་སྦྱོང་བའི་གསོལ་འདེབས་སྨོན་ལམ་གྱི་འགྲེལ་པ་གཏན་བདེའི་ས་བོན་བཞུགས་སོ།
     །
